--- a/index.html
+++ b/index.html
@@ -5,15 +5,73 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new project</title>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
-
+        <h2 class="header-title">All Thinks Are <br> Possible If You <br> believe</h2>
+        <img src="images/banner/banner2.png" alt="" class="header-img">
+        <p class="header-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+        <button class="btn-primary">Contact Us</button>
     </header>
     <main>
-        <section>
-
+        <!-- failure-section starts from here  -->
+        <section class="section failure-section">
+            <div class="section-img">
+                <img src="images/person.png" alt="" class="image">
+            </div>
+            <div class="section-blog">
+                <h2 class="section-title">My failures of previous year</h2>
+                <p class="section-desc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul>                   
+                    <li>
+                        <i class="fa-solid fa-check"></i>
+                        Contrary to popular belief, is not simply.</li>
+                    <li>
+                        <i class="fa-solid fa-check"></i>
+                        Contrary to popular belief.</li>
+                    <li>
+                        <i class="fa-solid fa-check"></i>
+                        Contrary to popular , is not simply.</li>
+                    <li>
+                        <i class="fa-solid fa-check"></i>
+                        Contrary to popular belief, is not simply.</li>
+                    <li>
+                        <i class="fa-solid fa-check"></i>
+                        Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </section>
+        <!-- failure-section end here  -->
+        <!-- my-plans section starts from here  -->
+        <section class="section my-plans">
+            <h3 class="section-heading">My Plans</h3>
+            <div class="container">
+                <div class="child child1">
+                    <img src="images/icons/web.png" alt="" class="child-img">
+                    <h4 class="child-heading">Web Development</h4>
+                    <p class="child-desc">I want to start</p>
+                </div>
+                <div class="child child2">
+                    <img src="images/icons/js.png" alt="" class="child-img">
+                    <h4 class="child-heading">Javascript</h4>
+                    <p class="child-desc">I want to learn</p>
+                </div>
+                <div class="child child3">
+                    <img src="images/icons/smoke.png" alt="" class="child-img">
+                    <h4 class="child-heading">Smoking Habit</h4>
+                    <p class="child-desc">I want to end</p>
+                </div>
+                <div class="child child4">
+                    <img src="images/icons/ecom.png" alt="" class="child-img">
+                    <h4 class="child-heading">ecommerce</h4>
+                    <p class="child-desc">I want to develop</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
