complete the project

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                 </ul>
             </div>
         </section>
-        <!-- failure-section end here  -->
         <!-- my-plans section starts from here  -->
         <section class="section my-plans">
             <h3 class="section-heading">My Plans</h3>
@@ -73,9 +72,50 @@
                 </div>
             </div>
         </section>
+        <!-- gradient section starts  -->
+        <section class="section gradient">
+            <div class="ovarlay">            
+                <h2 class="gradient-heading">Awlays keep a positive mindset</h2>
+                <button class="gradient-btn">Call Now</button>
+            </div>
+        </section>
+        <!-- extra one section starts -->
+        <section class="section what-i-love">
+            <h2 class="section-title">What I Love</h2>
+            <div class="card-container">
+                <div class="card">
+                    <h3 class="card-title">Coding</h3>
+                    <p class="card-sub-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, incidunt.</p>
+                    <img class="card-img" src="images/icons/programming.png" alt="">
+                </div>
+                <div class="card">
+                    <h3 class="card-title">Cricket</h3>
+                    <p class="card-sub-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, incidunt.</p>
+                    <img class="card-img" src="images/icons/cricket.png" alt="">
+                </div>
+                <div class="card">
+                    <h3 class="card-title">Badminton</h3>
+                    <p class="card-sub-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, incidunt.</p>
+                    <img class="card-img" src="images/icons/badminton.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="div1">
+            <h4 class="footer-header">Future</h4>
+            <p class="footer-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <p class="footer-para">Email : info@gmail.com</p>
+            <p class="footer-para">Phone : 01500 00 00 00</p>
+            <img class="footer-img" src="images/icons/fb.png" alt="">
+            <img class="footer-img" src="images/icons/twitter.png" alt="">
+            <img class="footer-img" src="images/icons/youtube.png" alt="">
+        </div>
+        <div class="div2">
+            <h5 class="div2-header">Subscribe</h5>
+            <input type="email" name="" id="" placeholder="Enter your email">
+            <button class="div2-btn">Subscribe</button>
+        </div>
     </footer>
 </body>
 </html>
